log
Wed 24 Apr 2024 12:29:58 AM UTC: 
 hashmap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
bb3b25a
Wed 24 Apr 2024 12:38:58 AM UTC: 
 hashmap.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
da85cfa
Wed 24 Apr 2024 12:55:55 AM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
870072c
Wed 24 Apr 2024 01:00:50 AM UTC: 
 hashmap.c | 19 +++++++++++++++++--
 1 file changed, 17 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:98:38: error: array subscript is not an integer
   98 |     Pair *current_pair = map->buckets[index];
      |                                      ^
Compilation failed
28907fa
